--- a/tugas-6-2-05124873121-15.ipynb
+++ b/tugas-6-2-05124873121-15.ipynb
@@ -823,7 +823,7 @@
    "id": "1eaaf6c5",
    "metadata": {},
    "source": [
-    "Sebagai bentuk awal dari pemahaman data dan juga untuk mengetahui pola data awal sebagai bekal untuk tahap modeling nantinya. Sebagai contoh ketika akan melakukan data "
+    "Sebagai bentuk awal dari pemahaman data dan juga untuk mengetahui pola data awal sebagai bekal untuk tahap modeling nantinya. Sebagai contoh ketika akan melakukan association rule dari data transaksi tersebut, kita membutuhkan nilai support yang didapat dari kemunculan barang dalam suatu kumpulan data transaksi. "
    ]
   }
  ],
