--- a/tugas-6-2-05124873121-15.ipynb
+++ b/tugas-6-2-05124873121-15.ipynb
@@ -805,9 +805,7 @@
     "print()\n",
     "\n",
     "group_waktu_best = pd.DataFrame(data_transaksi.groupby(['GasStationID','Date',\"Jam\"]).count())\n",
-    "print(group_waktu_best[group_waktu_best['TransactionID'] == group_waktu_best.groupby(level=[0])['TransactionID'].transform(max)])\n",
-    "\n",
-    "#df[df['data'] == df.groupby(level=[0])['data'].transform(max)]"
+    "print(group_waktu_best[group_waktu_best['TransactionID'] == group_waktu_best.groupby(level=[0])['TransactionID'].transform(max)])"
    ]
   },
   {
