Menambahkan link akses online di Tugas

--- a/tugas-6-2-05124873121-15.ipynb
+++ b/tugas-6-2-05124873121-15.ipynb
@@ -8,7 +8,9 @@
     "# Tugas Harian AI KOMINFO Sesi 5\n",
     "\n",
     "Nama: Adam Mukharil Bachtiar <br>\n",
-    "Kelas: ITB05"
+    "Kelas: ITB05\n",
+    "\n",
+    "Jupyter Notebook ini bisa diakses secara online di https://github.com/adammb86/LatihanDataUnderstanding/blob/master/tugas-6-2-05124873121-15.ipynb."
    ]
   },
   {
